# fogros-demos

./: .gitignore  README.md
gqcnn-ros/: CMakeLists.txt  README.md  package.xml
gqcnn-ros/docker/: Dockerfile_pj_cpu.ros  Dockerfile_pj_gpu.ros  Dockerfile_suction_cpu.ros  Dockerfile_suction_gpu.ros
gqcnn-ros/launch/: gqcnn_ros_client.launch  gqcnn_ros_planner.launch
gqcnn-ros/nodes/: gqcnn_ros_client.py  gqcnn_ros_node.py
gqcnn-ros/scripts/: download_fc_pj_model.sh  download_fc_suction_model.sh
mpt_ros/: CMakeLists.txt  package.xml
mpt_ros/src/: mpt_ros_client.cpp  mpt_ros_fetch_client.cpp  mpt_ros_fetch_node.cpp  mpt_ros_node.cpp
